# refi-protocol

./: .env.example  .gitignore  LICENSE  Plastiks.postman_collection.json  README.md  Readme.md  docker-compose.yml  package-lock.json  package.json  roadmap.txt  tsconfig.json
backend/: .dockerignore  Dockerfile  README.md  jest.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: bull.ts  index.ts
backend/src/bull/: connection.ts  index.ts  queues.ts
backend/src/config/: decrypt.ts  environment.ts
backend/src/db/: config.ts  (+1 more)
backend/test/: index.test.ts  roadmap.test.ts  roadmap2.test.ts  user.test.ts
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
frontend/Plastic Doc/: .~lock.smart-contract-details.odt#  Requirement Doc Plastic Credit ReFi v1 10FEB2025.odg  smart-contract-details.odt
frontend/src/: App.tsx  index.css  main.tsx  socket.ts  vite-env.d.ts
frontend/test/: App.test.tsx
smart-contract/: .gitignore  LICENSE  README.md  new-template.cabal
smart-contract/bash-scripts/: command.txt  create-preprod-wallet.sh  generate-script-address.sh  getTxFunc.sh  lock.sh  query-utxo.sh  send-all-utxos.sh  send-token.sh  send-usdm-plastik.sh  sendLovelacePreprod.sh  tmp.txt  unlock.sh  walletbalance.sh
smart-contract/bash-scripts/data/: datum-pre1-roadmap1.json  datum-pre2-roadmap3.json  description.txt  redeemer.json
smart-contract/bash-scripts/pre/: payment.addr  payment.skey  payment.vkey  pubKey.hash  stake.skey  stake.vkey
smart-contract/bash-scripts/tmp/: utxos.txt
smart-contract/docs/: Smart-contract-details.odt
smart-contract/output/: governance.json  refi.addr  refi.json  reward.addr  reward.json
smart-contract/src/Governance/: Compiler.hs  Validator.hs
smart-contract/src/Lend/: Compiler.hs  StakeReward.hs
smart-contract/src/Refi/: Compiler.hs  Validator.hs
smart-contract/test/: Spec.hs
smart-contract/test/Spec/: Governance.hs  Refi.hs  StakeReward.hs
src/: index.ts
src/Refi smart contract/: cabal.project
src/controllers/: roadmap.controller.ts
src/models/: completedRoadmap.model.ts
src/policy/: policy.json
src/routes/: roadmap.routes.ts  user.routes.ts
src/types/: roadmap.types.ts
(+151 files in other folders)
